--- a/css/styles.css
+++ b/css/styles.css
@@ -101,12 +101,70 @@ h2,
   width: 45px;
 }
 
-h4 {
-  align-self: center;
-  color: #d0d0d0;
+#getRandomMeme {
+  margin: 20px;
+  color: #00cdcd;
+  background: #c3c3c3;
+  padding: 1px;
+  border-radius: 5px;
 }
 
-.review-body {
+.random-container {
+  flex-grow: 1;
+}
+
+#random-meme {
+  display: flex;
+  justify-content: center;
+}
+
+.random-meme-img {
+  height: 200px;
+  width: 300px;
+  padding: 10px;
+}
+
+
+/* Style the tab */
+.tab {
+ overflow: hidden;
+ margin-left: 10px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+ background-color: #f1f1f1;
+ margin-right: 10px;
+ float: left;
+ border: none;
+ outline: none;
+ cursor: pointer;
+ padding: 14px 16px;
+ transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+ background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+ background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+ display: none;
+ padding: 6px 12px;
+ border-top: none;
+}
+
+
+
+
+h4 {
+  align-self: center;
   color: #d0d0d0;
 }
 
@@ -176,5 +234,11 @@ body {
   .bio-text {
     width: 700px;
     align-self: center;
+  }
+
+  .random-meme-img {
+    height: 400px;
+    width: 600px;
+    padding: 10px;
   }
 }
